# tailleur

./: .gitignore  .gitreview  README.md  pyproject.toml
examples/: benchmarks.yaml  config.yaml
tailleur/: __init__.py  benchmark.py  cli.py
